--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 <body>
 
 <h1>Broadway Design</h1>
-  <a href="#">Home</a>
-  <a href="#">About</a>
-  <a href="#">Work</a>
-  <a href="#">Team</a>
-  <a href="#">Contact</a>
+  <ul>
+    <li href="#">Home</li>
+    <li href="#">About</li>
+    <li href="#">Work</li>
+    <li href="#">Team</li>
+    <li href="#">Contact</li>
+  </ul>
 
 <h3>Our Process</h3>
   <img src="./resources/icons/identify.svg">
