--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
 <body>
 
 <h1>Broadway Design</h1>
-  <ul>
-    <li href="#">Home</li>
-    <li href="#">About</li>
-    <li href="#">Work</li>
-    <li href="#">Team</li>
-    <li href="#">Contact</li>
-  </ul>
+    <a href="#">Home</a><br>
+    <a href="#">About</a><br>
+    <a href="#">Work</a><br>
+    <a href="#">Team</a><br>
+    <a href="#">Contact</a>
 
 <h3>Our Process</h3>
   <img src="./resources/icons/identify.svg">
