Add background images

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 
+<div class="title">
 <h1>Broadway Design</h1>
     <a href="#">Home</a><br>
     <a href="#">About</a><br>
@@ -13,18 +14,20 @@
     <a href="#">Team</a><br>
     <a href="#">Contact</a>
 
-<h3>Our Process</h3>
-  <img src="./resources/icons/identify.svg">
-  <h4>Identify</h4>
-  <p>We focus on the most important details</p>
-  <img src="./resources/icons/understand.svg">
-  <h4>Understand</h4>
-  <p>We study our projects inside out</p>
-  <img src="./resources/icons/execute.svg">
-  <h4>Execute</h4>
-  <p>We put everything we have into our work</p>
-
+    <h3>Our Process</h3>
+      <img src="./resources/icons/identify.svg">
+        <h4>Identify</h4>
+          <p>We focus on the most important details</p>
+          <img src="./resources/icons/understand.svg">
+        <h4>Understand</h4>
+          <p>We study our projects inside out</p>
+          <img src="./resources/icons/execute.svg">
+        <h4>Execute</h4>
+          <p>We put everything we have into our work</p>
+</div>
+<div class="design">
 <h4>Designed in New York</h4>
+</div>
 
 <h4>Portfolio</h4>
   <p>Coming Soon</p>
@@ -34,9 +37,11 @@
   <p>Phone: (555)-555-5555<br>
   E-mail: test@example.com<br>
   Twitter: @test</p>
-<footer>
-  <p>&copy; Broadway 2017 <a href="#">Home</a><a href="#">About</a><a href ="#">Work</a><a href ="#">Team</a><a href="#">Contact</a>
-</footer>
+<div id="footer">
+  <footer>
+    <p>&copy; Broadway 2017 <a href="#">Home</a><a href="#">About</a><a href ="#">Work</a><a href ="#">Team</a><a href="#">Contact</a>
+  </footer>
+<div>
 
 </body>
 </html>
