Correct small mistakes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   E-mail: test@example.com<br>
   Twitter: @test</p>
 
-<div id="footer">
+<div class="footer">
   <footer>
     <p>&copy; Broadway 2017 <a href="#">Home</a><a href="#">About</a><a href ="#">Work</a><a href ="#">Team</a><a href="#">Contact</a>
   </footer>
