--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 
     <h3>Our Process</h3>
       <img src="./resources/icons/identify.svg">
-        <h4>Identify</h4>
+        <h4 id="wedo">Identify</h4>
           <p>We focus on the most important details</p>
           <img src="./resources/icons/understand.svg">
-        <h4>Understand</h4>
+        <h4 id="wedo">Understand</h4>
           <p>We study our projects inside out</p>
           <img src="./resources/icons/execute.svg">
-        <h4>Execute</h4>
+        <h4 id="wedo">Execute</h4>
           <p>We put everything we have into our work</p>
 
 <div class="design">
-<h4>Designed in New York</h4>
+<h4 id="bigapple">Designed in New York</h4>
 </div>
 
 <h4>Portfolio</h4>
