--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 
 <div class="title">
 <h1>Broadway Design</h1>
-    <a href="#">Home</a><br>
-    <a href="#">About</a><br>
-    <a href="#">Work</a><br>
-    <a href="#">Team</a><br>
-    <a href="#">Contact</a>
+  <ul id="mainmenu">
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Work</a></li>
+    <li><a href="#">Team</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
 </div>
 
     <h3>Our Process</h3>
@@ -41,7 +43,14 @@
 
 <div class="footer">
   <footer>
-    <p>&copy; Broadway 2017 <a href="#">Home</a><a href="#">About</a><a href ="#">Work</a><a href ="#">Team</a><a href="#">Contact</a>
+    <p>&copy; Broadway 2017</p>
+    <ul id="footermenu"> 
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href ="#">Work</a></li>
+      <li><a href ="#">Team</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
   </footer>
 <div>
 
