Change footer menu settings

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
 <div class="footer">
   <footer>
-    <p>&copy; Broadway 2017</p>
-    <ul id="footermenu"> 
+    <ul id="footermenu">
+      <li><p id="copy">&copy; Broadway 2017</p>
       <li><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
       <li><a href ="#">Work</a></li>
