--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <h1>Broadway Design</h1>
   <ul id="mainmenu">
     <li><a href="#">Home</a></li>
+    <li><a href="#">Process</a></li>
     <li><a href="#">About</a></li>
     <li><a href="#">Work</a></li>
     <li><a href="#">Team</a></li>
@@ -29,7 +30,7 @@
           <p>We put everything we have into our work</p>
 
 <div class="design">
-<h4 id="bigapple">Designed in New York</h4>
+  <h4 id="bigapple">Designed in New York</h4>
 </div>
 
 <h4>Portfolio</h4>
@@ -46,6 +47,7 @@
     <ul id="footermenu">
       <li><p id="copy">&copy; Broadway 2017 </p>
       <li><a href="#">Home</a></li>
+      <li><a href="#">Process</a></li>
       <li><a href="#">About</a></li>
       <li><a href ="#">Work</a></li>
       <li><a href ="#">Team</a></li>
