--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 <body>
 
 <div class="title">
-<h1>Broadway Design</h1>
+<h1 id="home">Broadway Design</h1>
   <ul id="mainmenu">
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Process</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Work</a></li>
-    <li><a href="#">Team</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="#home">Home</a></li>
+    <li><a href="#process">Process</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#wedo">Work</a></li>
+    <li><a href="#team">Team</a></li>
+    <li><a href="#contact">Contact</a></li>
   </ul>
 </div>
 
-    <h3>Our Process</h3>
+    <h3 id="process">Our Process</h3>
       <img src="./resources/icons/identify.svg">
         <h4 id="wedo">Identify</h4>
           <p>We focus on the most important details</p>
@@ -35,9 +35,9 @@
 
 <h4>Portfolio</h4>
   <p>Coming Soon</p>
-<h4>Team</h4>
+<h4 id="team">Team</h4>
   <p>We're Hiring!</p>
-<h4>Contact</h4>
+<h4 id="contact">Contact</h4>
   <p>Phone: (555)-555-5555<br>
   E-mail: test@example.com<br>
   Twitter: @test</p>
