--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
   <footer>
     <ul id="footermenu">
       <li><p id="copy">&copy; Broadway 2017 </p>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Process</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href ="#">Work</a></li>
-      <li><a href ="#">Team</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#process">Process</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href ="#wedo">Work</a></li>
+      <li><a href ="#team">Team</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </footer>
 <div>
