--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<div class="title">
+<nav class="title">
 <h1 id="home">Broadway Design</h1>
   <ul id="mainmenu">
     <li><a href="#home">Home</a></li>
@@ -16,7 +16,7 @@
     <li><a href="#team">Team</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
-</div>
+</nav>
 
     <h3 id="process">Our Process</h3>
       <img src="./resources/icons/identify.svg">
