--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <footer>
     <ul id="footermenu">
       <li><p id="copy">&copy; Broadway 2017 </p>
-      <li><a href="#home">Home</a></li>
+      <li><a href="#home"> GHome</a></li>
       <li><a href="#process">Process</a></li>
       <li><a href="#about">About</a></li>
       <li><a href ="#wedo">Work</a></li>
